--- a/Content/Site.css
+++ b/Content/Site.css
@@ -18,7 +18,6 @@ textarea {
     max-width: 280px;
 }
 
-
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
     .jumbotron {
@@ -28,4 +27,34 @@ textarea {
     .body-content {
         padding: 0;
     }
+}
+
+.stats {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.user {
+    display: inline;
+}
+
+h4 {
+    display: inline;
+}
+
+#label {
+    margin-left: 15px;
+    margin-right: 2px;
+}
+
+#profilePic {
+    border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+}
+
+#username {
+    text-align: center;
 }
